erDiagram
  ORG_UNITS ||--o{ ORG_UNITS : "parent_id"
  ORG_UNITS ||--o{ SCHOOLS : "org_unit_id"
  SCHOOLS ||--o{ CLASSES : "school_id"
  CLASSES ||--o{ STUDENTS : "class_id"
  STUDENTS ||--o{ OBSERVATIONS : "student_id"
  SCHOOLS ||--o{ MATERIALS : "school_id"
  CLASSES ||--o{ MATERIALS : "class_id"
  STUDENTS ||--o{ MATERIALS : "student_id"
  SCHOOLS ||--o{ AI_SUGGESTIONS : "school_id"
  SCHOOLS ||--o{ ANNOUNCEMENTS : "school_id"
  SCHOOLS ||--o{ EVENTS : "school_id"
  PROFILES ||--o{ USER_ROLES : "user_id"
  SCHOOLS ||--o{ USER_ROLES : "school_id"
  ORG_UNITS ||--o{ USER_ROLES : "org_unit_id"
  PROFILES ||--o{ IMPORT_RUNS : "user_id"
  PROFILES ||--o{ AUDIT_LOG : "actor_id"
